@@ -1,0 +1,3 @@
+let () =
+  print_int Foo.A.x;
+  print_newline ()
